<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="FB_GantryXYZ" Id="{474e1990-f731-0ed9-052c-42626742a38f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_GantryXYZ EXTENDS FB_PackML_BaseModule 
VAR
    // Sub module definitions here

    // List of sub modules
    ipSubModules_Init : ARRAY[1..Parameters_PackML_Base.MAX_NO_OF_SUBMODULES] OF I_PackML_BaseModule := [];

    // Component definitions here
    AxisX       		: FB_Component_BasicAxis 		:= (Name := 'AxisX');
    AxisY    			: FB_Component_BasicAxis 		:= (Name := 'AxisY');
	AxisZ				: FB_Component_BasicAxis		:= (Name := 'AxisZ');
    GantryCylinder		: FB_GantryXYCylinder			:= (Name := 'Cylinder');
    //Alarms for this module
    GantryAlarms : ARRAY[1..GANTRY_ALARM_COUNT] OF FB_TcAlarm;

	//IO
	LimitSwitchX :BOOL;
	LimitSwitchY :BOOL;
	LimitSwitchZ :BOOL;

	HomeComplete :BOOL;
	
	//resets


END_VAR

VAR CONSTANT
    GANTRY_ALARM_COUNT : INT := 5;
END_VAR


]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Folder Name="MyMethods" Id="{d166ca9d-f57a-4d88-ac90-142e5eb5d488}" />
    <Folder Name="States" Id="{8df42c9b-c051-49f1-9767-900503632339}" />
    <Method Name="Aborting" Id="{5476dfef-6652-4e6b-8928-3724a50553de}" FolderPath="States\">
      <Declaration><![CDATA[
METHOD PROTECTED Aborting
VAR
	i				: UDINT;
	SubModulesReady : BOOL := TRUE;
END_VAR

]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE SequenceState OF
    0:
        NoStateTasksToComplete := FALSE;
        SequenceState          := SequenceState + 10;
    10:
		AxisX.Disable();
		AxisZ.Disable();
		AxisY.Disable();
		SequenceState := SequenceState + 10;
	20:

		StateTasksComplete := TRUE;
END_CASE

SUPER^.Aborting();]]></ST>
      </Implementation>
    </Method>
    <Method Name="Clearing" Id="{9be5800b-bdc3-471f-9b7d-42ef121d5c77}" FolderPath="States\">
      <Declaration><![CDATA[METHOD PROTECTED Clearing
VAR
	i				: UDINT;
	SubModulesReady : BOOL := TRUE;
END_VAR

VAR_INST
	//SoEResetAxis1 : FB_SoEReset;
	//ResetAxis1 :	MC_Reset;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE SequenceState OF
    0:
        NoStateTasksToComplete := FALSE;
        SequenceState          := SequenceState + 10;
    10:
		//Reset any alarms that get latched
//		GantryAlarms[E_Gantry.AlarmMessage].Clear(0,0);		
//		GantryAlarms[E_Gantry.InfoMessage].Clear(0,0);
//		GantryAlarms[E_Gantry.InitReferenceEvent].Clear(0,0);
//		GantryAlarms[E_Gantry.StartTimeout].Clear(0,0);
//		GantryAlarms[E_Gantry.WarnMessage].Clear(0,0);
		AxisX.Reset();
		AxisY.Reset();
		AxisZ.Reset();

		SequenceState := SequenceState + 10;
	20:
	
		SequenceState := SequenceState + 10;
	30: 

		IF ResetSafety() THEN
			SequenceState := SequenceState + 10;		
		END_IF	
    40:

        // Enable here
		// AxisX.Enable();
		// AxisY.Enable();
		// AxisZ.Enable();

        // Check enabled here
		// IF AxisX.Enabled AND AxisY.Enabled AND AxisZ.Enabled THEN
			// SequenceState := SequenceState + 10;
		// END_IF
		
		SequenceState := SequenceState + 10;
		
    50:
        StateTasksComplete := TRUE;
		
END_CASE

SUPER^.Clearing();]]></ST>
      </Implementation>
    </Method>
    <Method Name="CreateEvents" Id="{40e5a283-7f33-033f-0879-cc11ecabc43d}">
      <Declaration><![CDATA[METHOD PROTECTED CreateEvents
VAR_INPUT
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Add your event creation here
F_CreateAllEventsInClass(Alarms     := GantryAlarms,
                         ClassSize  := SIZEOF(TC_EVENTS.Gantry),
                         pInitEvent := ADR(TC_EVENTS.Gantry.InitReferenceEvent),
                         Prefix     := _Name);

// Super call to base
SUPER^.CreateEvents();]]></ST>
      </Implementation>
    </Method>
    <Method Name="CuttingBoxFiveSides" Id="{391386b3-3ac4-4fc7-a2a1-1d79f5676796}" FolderPath="MyMethods\">
      <Declaration><![CDATA[METHOD CuttingBoxFiveSides : BOOL

VAR_INST
	Step : INT ;	
END_VAR



(*
	F			H
	|			|
D---+-----------+---C
	|			|
	|			| 
B---+-----------+---A
	|			|
	E			G
*)]]></Declaration>
      <Implementation>
        <ST><![CDATA[
CASE Step OF
	0:
		CuttingBoxFiveSides := FALSE;
		Trace('Start Cutting Box Five Sides');

		IF AxisZ.Enable() THEN
			Trace('Enable');
			Step := Step + 10;
		END_IF

	10:
		IF AxisZ.Enabled THEN
			Trace('ENABLED');
			Step := Step + 10;
		END_IF

	20:
		IF AxisZ.MoveVelocity(-2, FALSE) THEN
			Trace('Moving');
			Step := 30;
		END_IF

	30:
		CuttingBoxFiveSides := TRUE;
		Step := 0;
		Trace('Box Five Sides is Cut');
END_CASE
]]></ST>
      </Implementation>
    </Method>
    <Method Name="CyclicLogic" Id="{0cfbfa67-40d6-05d6-0515-ef1c50353a78}">
      <Declaration><![CDATA[METHOD CyclicLogic
VAR_INPUT
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT _InitComplete THEN
    _InitComplete := Initialize();
    RETURN;
END_IF

SUPER^.CyclicLogic();

//Set the current alarm severity for this module
_CurrentAlarmSeverity := F_GetMaxSeverityRaised(Alarms := GantryAlarms, CurrentSeverity := _CurrentAlarmSeverity);

//Simulate Alarm Messaging
]]></ST>
      </Implementation>
    </Method>
    <Method Name="Execute" Id="{895d1ef9-5e85-47dd-a8bf-b32885837641}" FolderPath="States\">
      <Declaration><![CDATA[METHOD PROTECTED Execute
]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE _CurrentMode OF

	//=================================PRODUCTION MODE==================================
	E_PMLUnitMode.ePMLUnitMode_Production:
		CASE SequenceState OF
			0:
				NoStateTasksToComplete := FALSE;
				
				IF CuttingBoxFiveSides() THEN
					SequenceState := SequenceState + 10;
				END_IF		
				
			10:		
				StateTasksComplete := TRUE;
				StateComplete();
			END_CASE

	//=================================MAINTENANCE & MANUAL MODE==================================
	E_PMLUnitMode.ePMLUnitMode_Maintenance, E_PMLUnitMode.ePMLUnitMode_Manual:
		;
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Method Name="HMIPermissions" Id="{a7a517c4-9176-4ef6-9045-d889c05c8a21}">
      <Declaration><![CDATA[METHOD PROTECTED HMIPermissions

]]></Declaration>
      <Implementation>
        <ST><![CDATA[//General Mode Based Monitoring and handling of HMI control
CASE _CurrentMode OF
   
 E_PMLUnitMode.ePMLUnitMode_Production:
        CASE _CurrentState OF
            E_PMLState.ePMLState_Stopped:
				AllowHMIControl(ThisModuleOnly := FALSE);
            E_PMLState.ePMLState_Idle:
				AllowHMIControl(ThisModuleOnly := FALSE);
            E_PMLState.ePMLState_Suspended:
         		AllowHMIControl(ThisModuleOnly := FALSE);
            E_PMLState.ePMLState_Execute:
            	AllowHMIControl(ThisModuleOnly := FALSE); 
            E_PMLState.ePMLState_Aborted:
                AllowHMIControl(ThisModuleOnly := FALSE); 
            E_PMLState.ePMLState_Held:
                AllowHMIControl(ThisModuleOnly := FALSE); 
            E_PMLState.ePMLState_Complete:
          		AllowHMIControl(ThisModuleOnly := FALSE); 
        END_CASE
		
    E_PMLUnitMode.ePMLUnitMode_Manual:
        AllowHMIControl(ThisModuleOnly := FALSE); 
	E_PMLUnitMode.ePMLUnitMode_Maintenance:
        AllowHMIControl(ThisModuleOnly := FALSE); 
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Method Name="Homing" Id="{7cf726af-0fa2-4719-9f55-f55ebcdc06af}" FolderPath="MyMethods\">
      <Declaration><![CDATA[METHOD Homing : BOOL

VAR_INST
	Step : INT ;
END_VAR]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE Step OF
		
	0:
		Homing := FALSE;
		IF AxisZ.Enable() THEN
			Trace('Enable');
			Step := Step + 10;
		END_IF
		
	10:
		IF AxisZ.Enabled THEN
			Trace('ENABLED');
			Step := Step + 10;
		END_IF

	20:
		IF IO.ProximitySensorZ THEN
			IF AxisZ.Stop() THEN
				IF NOT AxisZ.Busy THEN
				AxisZ.Home();
				Trace('Jestem już na krancowce');
				Step := 80;
				END_IF
			END_IF
		ELSE		
			Step := Step + 10;
		END_IF
		
	30:
		IF AxisZ.MoveVelocity(5, FALSE) THEN
			Trace('Szybki ruch, szukam krancowki');
            Step := Step + 10;
        END_IF
		
	
	40: 
		IF IO.ProximitySensorZ THEN
			
		IF AxisZ.Stop() THEN
			IF NOT AxisZ.Busy THEN
				Trace('Znalazłem krańcówkę');
				Step := Step + 10;
			END_IF
		END_IF

		END_IF

	50:
		IF AxisZ.MoveRelative(-5,FALSE) THEN
			Trace('Odsunięcie od krańcówki, po szybkim');
			Step := Step + 10;
		END_IF
		
	60: 
		IF AxisZ.MoveVelocity(1,FALSE) THEN
			Trace('Spokojny powrot dla precyzji');		
			Step := Step + 10;
		END_IF	
		
	70:
		IF IO.ProximitySensorZ THEN
			IF AxisZ.Stop() THEN
				Trace('Zatrzymuje sie');
				Step := Step + 10; // Przechodzimy do czekania na zatrzymanie
			END_IF
		END_IF

	80:
		IF NOT AxisZ.Busy THEN
			IF AxisZ.Home() THEN
				Step := Step + 10;
				Trace('Precyzyjny Home wykonany');
			END_IF
		END_IF


	90:	
		IF AxisZ.MoveRelative(-2.0, FALSE) THEN
			Trace('Odsunięcie od krańcówki o 2mm');
			Step := Step + 10;
		END_IF
	
	100:
		IF NOT AxisZ.Busy THEN
			IF AxisZ.Home() THEN
				Trace('Ustawienie nowego zera po odsunięciu');
				Step := Step + 10;
			END_IF
		END_IF
	
	110:
		Homing := TRUE;
		Trace('Homing zakończony pomyślnie');
		Step := 0;
			
	END_CASE
	

]]></ST>
      </Implementation>
    </Method>
    <Method Name="Initialize" Id="{ba85f303-ffbe-03ad-229b-3741bd93e6e2}">
      <Declaration><![CDATA[//! @summary Basic module initialization logic
METHOD PROTECTED Initialize : BOOL;
VAR
    i                        : UDINT;
    varInfo                  : __SYSTEM.VAR_INFO;
    AllSubUnitsInitialized   : BOOL := TRUE;
    AllComponentsInitialized : BOOL := TRUE;
END_VAR

//! @description This method is called by <c>CyclicLogic()</c> as required]]></Declaration>
      <Implementation>
        <ST><![CDATA[Initialize := FALSE;
CASE DescendantSequenceState OF
    0:
		RegisterComponent(AxisX);
		RegisterComponent(AxisY);	
		RegisterComponent(AxisZ);	
		RegisterComponent(GantryCylinder);
		
        _LogModeChanges         := FALSE;
        _LogStateChanges        := FALSE;
        DescendantSequenceState := DescendantSequenceState + 10;
    10:
        DescendantSequenceState := DescendantSequenceState + 10;
    20:
        //Copy Mode names
        FOR i := 1 TO 3 DO
            ModeNames[i] := F_UnitModeToString(UDINT_TO_DINT(i));
        END_FOR

        DescendantSequenceState := DescendantSequenceState + 10;
    30:
        //Call the Super
        IF SUPER^.Initialize() THEN
            DescendantSequenceState := DescendantSequenceState + 10;
        END_IF
    40:
        Initialize := TRUE;
END_CASE]]></ST>
      </Implementation>
    </Method>
    <Method Name="ResetSafety" Id="{6bac4035-16f4-4bf2-95a7-9f0b204a82b7}" FolderPath="MyMethods\">
      <Declaration><![CDATA[METHOD ResetSafety : BOOL
VAR_INST
	Step : INT ;	
	SafetyTimer :TON;
	SafetyTimerTrigger :R_TRIG;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[//auto resetting timer, a start condition is an end condition
SafetyTimer(IN:= Step > 0 AND NOT SafetyTimer.Q, PT:= T#500MS);

CASE Step OF
		
		0:  // Reset group or waits
			ResetSafety:= FALSE;
			Trace('Timer Initialize');
			Step := Step + 10;
			
		10: //If necessary reset group
		
			GVL_Safety.ErrorAck := (GVL_Safety.ComError OR GVL_Safety.FBError); 
		
			IF GVL_Safety.ErrorAck OR SafetyTimer.Q THEN 
				Step := Step + 10;
			END_IF

		20: //Wait for the signal propagation
			IF SafetyTimer.Q THEN
				GVL_Safety.ErrorAck := FALSE;
				Step := Step + 10;
			END_IF
		
		30: //Check FB errors
			IF GVL_Safety.FBError OR (NOT GVL_Safety.SafetyPermission) THEN
				GVL_Safety.RestartFBs := TRUE;
			END_IF
			
			Step := Step + 10;
			
		40: //Wait for the signal propagation
		
			IF SafetyTimer.Q THEN
				GVL_Safety.RestartFBs := FALSE;
				Step := Step + 10;
			END_IF	
			
		50: //Wait for the signal propagation
			
			
		IF SafetyTimer.Q THEN
				
			
				IF GVL_Safety.SafetyPermission AND 
					NOT (GVL_Safety.ComError OR GVL_Safety.FBError OR GVL_Safety.SafeError) 
				
					THEN
						Step := 0;
						ResetSafety := TRUE;
					ELSE
						Step := 0;
						ResetSafety := FALSE;
				END_IF
			
			END_IF
		
		ELSE
		
		Step := 0;	

END_CASE

]]></ST>
      </Implementation>
    </Method>
    <Method Name="Resetting" Id="{e7a01217-de28-430f-aeef-f83d9f1b6f0d}" FolderPath="States\">
      <Declaration><![CDATA[METHOD PROTECTED Resetting
VAR
	i				: UDINT;
	SubModulesReady : BOOL := TRUE;
END_VAR

]]></Declaration>
      <Implementation>
        <ST><![CDATA[CASE _CurrentMode OF

	//=================================PRODUCTION MODE==================================
	E_PMLUnitMode.ePMLUnitMode_Production:
		CASE SequenceState OF
			0:
				NoStateTasksToComplete := TRUE;
				
				IF  Homing() THEN
					SequenceState := SequenceState + 10;	
				END_IF		
				
			10:		
				StateTasksComplete := TRUE;
				SUPER^.Resetting();
		END_CASE

	//=================================MAINTENANCE & MANUAL MODE==================================
	E_PMLUnitMode.ePMLUnitMode_Maintenance, E_PMLUnitMode.ePMLUnitMode_Manual:
		;
END_CASE

]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_GantryXYZ">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_GantryXYZ.Aborting">
      <LineId Id="30" Count="4" />
      <LineId Id="44" Count="0" />
      <LineId Id="88" Count="1" />
      <LineId Id="56" Count="1" />
      <LineId Id="61" Count="1" />
      <LineId Id="79" Count="1" />
      <LineId Id="29" Count="0" />
    </LineIds>
    <LineIds Name="FB_GantryXYZ.Clearing">
      <LineId Id="28" Count="5" />
      <LineId Id="78" Count="0" />
      <LineId Id="83" Count="3" />
      <LineId Id="75" Count="2" />
      <LineId Id="130" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="121" Count="0" />
      <LineId Id="123" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="142" Count="3" />
      <LineId Id="65" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="95" Count="0" />
      <LineId Id="37" Count="0" />
      <LineId Id="80" Count="1" />
      <LineId Id="49" Count="0" />
      <LineId Id="40" Count="4" />
      <LineId Id="66" Count="0" />
      <LineId Id="82" Count="0" />
      <LineId Id="67" Count="0" />
      <LineId Id="45" Count="1" />
      <LineId Id="68" Count="0" />
      <LineId Id="47" Count="1" />
      <LineId Id="27" Count="0" />
    </LineIds>
    <LineIds Name="FB_GantryXYZ.CreateEvents">
      <LineId Id="3" Count="6" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_GantryXYZ.CuttingBoxFiveSides">
      <LineId Id="379" Count="2" />
      <LineId Id="423" Count="0" />
      <LineId Id="382" Count="23" />
      <LineId Id="19" Count="0" />
    </LineIds>
    <LineIds Name="FB_GantryXYZ.CyclicLogic">
      <LineId Id="3" Count="5" />
      <LineId Id="12" Count="4" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_GantryXYZ.Execute">
      <LineId Id="24" Count="8" />
      <LineId Id="49" Count="0" />
      <LineId Id="36" Count="3" />
      <LineId Id="52" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="42" Count="3" />
      <LineId Id="23" Count="0" />
    </LineIds>
    <LineIds Name="FB_GantryXYZ.HMIPermissions">
      <LineId Id="6" Count="24" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="FB_GantryXYZ.Homing">
      <LineId Id="151" Count="1" />
      <LineId Id="171" Count="0" />
      <LineId Id="363" Count="0" />
      <LineId Id="172" Count="1" />
      <LineId Id="205" Count="0" />
      <LineId Id="174" Count="0" />
      <LineId Id="179" Count="1" />
      <LineId Id="176" Count="0" />
      <LineId Id="206" Count="0" />
      <LineId Id="177" Count="0" />
      <LineId Id="161" Count="0" />
      <LineId Id="178" Count="0" />
      <LineId Id="207" Count="0" />
      <LineId Id="211" Count="0" />
      <LineId Id="223" Count="0" />
      <LineId Id="317" Count="0" />
      <LineId Id="341" Count="0" />
      <LineId Id="277" Count="0" />
      <LineId Id="227" Count="0" />
      <LineId Id="318" Count="0" />
      <LineId Id="226" Count="0" />
      <LineId Id="230" Count="1" />
      <LineId Id="224" Count="0" />
      <LineId Id="221" Count="0" />
      <LineId Id="214" Count="0" />
      <LineId Id="237" Count="0" />
      <LineId Id="278" Count="0" />
      <LineId Id="238" Count="0" />
      <LineId Id="229" Count="0" />
      <LineId Id="232" Count="1" />
      <LineId Id="244" Count="0" />
      <LineId Id="260" Count="0" />
      <LineId Id="250" Count="0" />
      <LineId Id="261" Count="0" />
      <LineId Id="286" Count="2" />
      <LineId Id="285" Count="0" />
      <LineId Id="259" Count="0" />
      <LineId Id="254" Count="0" />
      <LineId Id="251" Count="0" />
      <LineId Id="245" Count="1" />
      <LineId Id="256" Count="0" />
      <LineId Id="280" Count="0" />
      <LineId Id="362" Count="0" />
      <LineId Id="247" Count="0" />
      <LineId Id="262" Count="0" />
      <LineId Id="282" Count="0" />
      <LineId Id="284" Count="0" />
      <LineId Id="283" Count="0" />
      <LineId Id="264" Count="2" />
      <LineId Id="327" Count="2" />
      <LineId Id="342" Count="0" />
      <LineId Id="330" Count="6" />
      <LineId Id="338" Count="2" />
      <LineId Id="306" Count="0" />
      <LineId Id="299" Count="0" />
      <LineId Id="249" Count="0" />
      <LineId Id="243" Count="0" />
      <LineId Id="352" Count="2" />
      <LineId Id="217" Count="0" />
      <LineId Id="219" Count="0" />
      <LineId Id="346" Count="0" />
      <LineId Id="355" Count="4" />
      <LineId Id="348" Count="0" />
      <LineId Id="347" Count="0" />
      <LineId Id="239" Count="0" />
      <LineId Id="220" Count="0" />
      <LineId Id="360" Count="0" />
      <LineId Id="181" Count="0" />
      <LineId Id="170" Count="0" />
      <LineId Id="5" Count="0" />
      <LineId Id="311" Count="0" />
      <LineId Id="345" Count="0" />
      <LineId Id="314" Count="0" />
    </LineIds>
    <LineIds Name="FB_GantryXYZ.Initialize">
      <LineId Id="3" Count="4" />
      <LineId Id="68" Count="0" />
      <LineId Id="8" Count="5" />
      <LineId Id="41" Count="5" />
      <LineId Id="48" Count="0" />
      <LineId Id="51" Count="7" />
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_GantryXYZ.ResetSafety">
      <LineId Id="104" Count="0" />
      <LineId Id="11" Count="4" />
      <LineId Id="119" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="76" Count="0" />
      <LineId Id="17" Count="28" />
      <LineId Id="71" Count="0" />
      <LineId Id="83" Count="3" />
      <LineId Id="88" Count="15" />
      <LineId Id="74" Count="1" />
      <LineId Id="5" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="111" Count="0" />
    </LineIds>
    <LineIds Name="FB_GantryXYZ.Resetting">
      <LineId Id="82" Count="5" />
      <LineId Id="89" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="114" Count="0" />
      <LineId Id="94" Count="9" />
      <LineId Id="27" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>